# client/Cargo.toml
[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
tls_common = { path = "../tls_common" }

tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26.0"
rustls = { version = "0.23.0", features = ["ring"] }
clap = { version = "4.5.4", features = ["derive"] }

rustls-pemfile = "2.1.0"