# tls_common/Cargo.toml
[package]
name = "tls_common"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cert-generator"
path = "src/bin/cert_generator.rs"

[dependencies]
# 库和二进制文件都需要的依赖
rcgen = "0.14.3"
rustls-pemfile = "2.1.0"
tokio-rustls = "0.26.0"
tokio = { version = "1", features = ["net"] }
rustls = { version = "0.23.0", features = ["ring"] }

# 仅 cert-generator 二进制文件需要的依赖
clap = { version = "4.2.1", optional = true }

x509-parser = "0.18"

hex = "0.4.3"
rsa = "0.10.0-rc.6"

openssl = { version = "0.10", features = ["vendored"] }
rand = "0.9.2"

[features]
default = []
# 创建一个 feature 来启用 clap，这样 server 和 client 就不需要间接依赖它
cert-gen = ["clap"]

# 强制降级 base16ct
[patch.crates-io]
base16ct = { version = "0.2.0" }
